<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorButtonNormal"
    tools:context=".CheckOut">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="365dp"
        android:layout_height="262dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="181dp"
        android:layout_height="36dp"
        android:text="@string/Check_Out"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="370dp"
        android:layout_height="172dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="365dp"
        android:layout_height="117dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="359dp"
        android:layout_height="64dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:text="@string/username"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:text="@string/address"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:text="@string/phone"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="368dp"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/address_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/button9"
        android:layout_width="67dp"
        android:layout_height="42dp"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/button14"
        android:layout_width="92dp"
        android:layout_height="43dp"
        android:text="Add New"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.565" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.229"
        app:srcCompat="@drawable/cookies" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:text="@string/itemName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toTopOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_shortDescri"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toTopOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toTopOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.447" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="48dp"
        android:layout_height="38dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/qty"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="85dp"
        android:layout_height="26dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/total_val"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.92" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/totalprice"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.935" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="21dp"
        android:layout_height="37dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/quyNo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.754" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Shipping_fee"
        app:layout_constraintBottom_toBottomOf="@+id/textView41"
        app:layout_constraintEnd_toEndOf="@+id/textView41"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        app:layout_constraintTop_toTopOf="@+id/textView41"
        app:layout_constraintVertical_bias="0.847" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/subTot"
        app:layout_constraintBottom_toBottomOf="@+id/textView41"
        app:layout_constraintEnd_toEndOf="@+id/textView41"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        app:layout_constraintTop_toTopOf="@+id/textView41"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalprice"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView41"
        app:layout_constraintEnd_toEndOf="@+id/textView41"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        app:layout_constraintTop_toTopOf="@+id/textView41"
        app:layout_constraintVertical_bias="0.322" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ship_price"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView41"
        app:layout_constraintEnd_toEndOf="@+id/textView41"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        app:layout_constraintTop_toTopOf="@+id/textView41"
        app:layout_constraintVertical_bias="0.795" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/final_tot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView45"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="@+id/textView45"
        app:layout_constraintTop_toTopOf="@+id/textView45"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalTot"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="@+id/textView45"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="@+id/textView45"
        app:layout_constraintTop_toTopOf="@+id/textView45"
        app:layout_constraintVertical_bias="0.733" />

    <Button
        android:id="@+id/button10"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:background="@android:color/holo_orange_light"
        android:text="Proceed to Pay"
        app:layout_constraintBottom_toBottomOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="@+id/textView45"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="@+id/textView45"
        app:layout_constraintTop_toTopOf="@+id/textView45"
        app:layout_constraintVertical_bias="0.437" />

</androidx.constraintlayout.widget.ConstraintLayout>