<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorButtonNormal"
    tools:context=".Credit_Debit_Card">

    <TextView
        android:id="@+id/textView48"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:text="@string/CreditDebit_card"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="268dp"
        android:layout_height="33dp"
        android:text="Add a new Credit/Debit Card"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="353dp"
        android:layout_height="351dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="349dp"
        android:layout_height="137dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="139dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toTopOf="@+id/textView50"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="@drawable/visa_master" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CardNo"
        app:layout_constraintBottom_toBottomOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toTopOf="@+id/textView50"
        app:layout_constraintVertical_bias="0.323" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="306dp"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CVV"
        app:layout_constraintBottom_toBottomOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toTopOf="@+id/textView50"
        app:layout_constraintVertical_bias="0.959" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cardName"
        app:layout_constraintBottom_toBottomOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toTopOf="@+id/textView50"
        app:layout_constraintVertical_bias="0.529" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ExpireNo"
        app:layout_constraintBottom_toBottomOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toTopOf="@+id/textView50"
        app:layout_constraintVertical_bias="0.742" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/final_tot"
        app:layout_constraintBottom_toBottomOf="@+id/textView53"
        app:layout_constraintEnd_toEndOf="@+id/textView53"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="@+id/textView53"
        app:layout_constraintTop_toTopOf="@+id/textView53"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalTot"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView53"
        app:layout_constraintEnd_toEndOf="@+id/textView53"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="@+id/textView53"
        app:layout_constraintTop_toTopOf="@+id/textView53"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/button15"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:background="@android:color/holo_orange_dark"
        android:text="Pay Now"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView53"
        app:layout_constraintEnd_toEndOf="@+id/textView53"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/textView53"
        app:layout_constraintTop_toTopOf="@+id/textView53"
        app:layout_constraintVertical_bias="0.852" />

</androidx.constraintlayout.widget.ConstraintLayout>